# Breast-Cancer-Segmentation

./: .gitignore  README.md  Untitled1.ipynb  data_preprocessing.ipynb  eval.ipynb  predict.ipynb  pyproject.toml  requirements.txt  train.ipynb
logs/train/: events.out.tfevents.1691054361.UPRATHAM.22972.0.v2  events.out.tfevents.1691054517.UPRATHAM.16860.0.v2  events.out.tfevents.1691054899.UPRATHAM.15388.0.v2  events.out.tfevents.1691055275.UPRATHAM.16916.0.v2  events.out.tfevents.1691056800.UPRATHAM.11680.0.v2  events.out.tfevents.1691056835.UPRATHAM.22480.0.v2  events.out.tfevents.1691066295.UPRATHAM.8484.0.v2  events.out.tfevents.1691066374.UPRATHAM.8484.1.v2  events.out.tfevents.1691066462.UPRATHAM.8484.2.v2  events.out.tfevents.1691066547.UPRATHAM.8484.3.v2  events.out.tfevents.1691069185.UPRATHAM.23828.0.v2  events.out.tfevents.1691069223.UPRATHAM.23828.1.v2  events.out.tfevents.1691069259.UPRATHAM.23828.2.v2  events.out.tfevents.1691069772.UPRATHAM.24052.0.v2  events.out.tfevents.1691069986.UPRATHAM.2280.0.v2  events.out.tfevents.1691070087.UPRATHAM.20644.0.v2  events.out.tfevents.1691070283.UPRATHAM.24612.0.v2  events.out.tfevents.1691071236.UPRATHAM.19976.0.v2  events.out.tfevents.1691150785.UPRATHAM.26208.0.v2  events.out.tfevents.1691150844.UPRATHAM.13168.0.v2  events.out.tfevents.1691150886.UPRATHAM.19564.0.v2  events.out.tfevents.1691150933.UPRATHAM.20568.0.v2  events.out.tfevents.1691151314.UPRATHAM.26176.0.v2  events.out.tfevents.1691151370.UPRATHAM.5164.0.v2  (+152 more)
src/: metrics.py  model2_DeeplabV3.py  model3_MultiResUNET.py  model_unet.py
(+117 files in other folders)
