[project]
name = "Breast-Cancer-Segmentataion"
version = "0.0.1"
description = "Breast-Cancer-Segmentataion"
authors = [{name = "Prathamesh Uravane", email = "upratham2002@gmail.com"}]
requires-python = "==3.10"
dependencies = [
    "albumentations>=1.0.0",
    "h5py>=3.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.5",
    "numpy>=1.21",
    "opencv-python>=4.5",
    "pandas>=1.3",
    "pydicom>=2.2",
    "scikit-image>=0.19",
    "scikit-learn>=1.0",
    "tensorflow==2.10.1",
    "tqdm>=4.60",
]




[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
